--- a/Week_04/exploratory_data_analysis_apartment_data.ipynb
+++ b/Week_04/exploratory_data_analysis_apartment_data.ipynb
@@ -833,11 +833,8 @@
    },
    "id": ""
   },
-  "interpreter": {
-   "hash": "80dd4b6cd41cca4ee92644ecda36a6b995104716f495f2fe281559cced81c062"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -851,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   },
   "toc": {
    "base_numbering": 1,
